# titans-engine-v3

./: .claude.md  .gitignore  CMakeLists.txt  README.md  build-wasm.bat  build-wasm.sh  serve.bat
src/: AI.cpp  AI.h  Board.cpp  Board.h  Game.cpp  Game.h  Move.cpp  Move.h  Piece.cpp  Piece.h  Renderer.cpp  Renderer.h  main.cpp
src/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/wasm/: ChessEngine.cpp
wasm-cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
web/: index.html
web/css/: board.css  pieces.css  style.css
